sintactico/y.output
Terminales no usados en la gramática

   TOK_FLECHA
   TOK_ERROR
   TOK_FOR
   TOK_SWITCH
   TOK_CASE
   TOK_DEFAULT
   TOK_FLOAT
   TOK_MALLOC
   TOK_CPRINTF
   TOK_FREE
   TOK_SET
   TOK_OF
   TOK_UNION
   TOK_INTERSECTION
   TOK_ADD
   TOK_CLEAR
   TOK_SIZE
   TOK_CONTAINS
   TOK_CONSTANTE_REAL


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' funciones sentencias '}'

    3 declaraciones: declaracion declaraciones
    4              | declaracion

    5 declaracion: modificadores_acceso clase identificadores ';'
    6            | modificadores_acceso declaracion_clase ';'

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE
    8                     | TOK_SECRET TOK_UNIQUE
    9                     | TOK_EXPOSED TOK_UNIQUE
   10                     | TOK_HIDDEN
   11                     | TOK_SECRET
   12                     | TOK_EXPOSED
   13                     | TOK_UNIQUE
   14                     | %empty

   15 clase: clase_escalar
   16      | clase_vector
   17      | clase_objeto

   18 declaracion_clase: modificadores_clase TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   19                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

   20 modificadores_clase: %empty

   21 clase_escalar: tipo

   22 tipo: TOK_INT
   23     | TOK_BOOLEAN

   24 clase_objeto: '{' TOK_IDENTIFICADOR '}'

   25 clase_vector: TOK_ARRAY tipo '[' constante_entera ']'
   26             | TOK_ARRAY tipo '[' constante_entera ',' constante_entera ']'

   27 identificadores: TOK_IDENTIFICADOR
   28                | TOK_IDENTIFICADOR ',' identificadores

   29 funciones: funcion funciones
   30          | %empty

   31 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   32 tipo_retorno: TOK_NONE
   33             | tipo
   34             | clase_objeto

   35 parametros_funcion: parametro_funcion resto_parametros_funcion
   36                   | %empty

   37 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   38                         | %empty

   39 parametro_funcion: tipo TOK_IDENTIFICADOR
   40                  | clase_objeto TOK_IDENTIFICADOR

   41 declaraciones_funcion: declaraciones
   42                      | %empty

   43 sentencias: sentencia
   44           | sentencia sentencias

   45 sentencia: sentencia_simple ';'
   46          | bloque

   47 sentencia_simple: asignacion
   48                 | lectura
   49                 | escritura
   50                 | retorno_funcion
   51                 | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   52                 | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   53                 | destruir_objeto

   54 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR

   55 bloque: condicional
   56       | bucle

   57 asignacion: TOK_IDENTIFICADOR '=' exp
   58           | elemento_vector '=' exp
   59           | elemento_vector '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   60           | TOK_IDENTIFICADOR '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   61           | identificador_clase '.' TOK_IDENTIFICADOR '=' exp

   62 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   63 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   64            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   65 bucle: TOK_WHILE exp '{' sentencias '}'

   66 lectura: TOK_SCANF TOK_IDENTIFICADOR
   67        | TOK_SCANF elemento_vector

   68 escritura: TOK_PRINTF exp

   69 retorno_funcion: TOK_RETURN exp
   70                | TOK_RETURN TOK_NONE

   71 exp: exp '+' exp
   72    | exp '-' exp
   73    | exp '/' exp
   74    | exp '*' exp
   75    | '-' exp
   76    | exp TOK_AND exp
   77    | exp TOK_OR exp
   78    | '!' exp
   79    | TOK_IDENTIFICADOR
   80    | constante
   81    | '(' exp ')'
   82    | '(' comparacion ')'
   83    | elemento_vector
   84    | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   85    | identificador_clase TOK_IDENTIFICADOR '(' lista_expresiones ')'
   86    | identificador_clase TOK_IDENTIFICADOR

   87 identificador_clase: TOK_IDENTIFICADOR
   88                    | TOK_ITSELF

   89 lista_expresiones: exp resto_lista_expresiones
   90                  | %empty

   91 resto_lista_expresiones: ',' exp resto_lista_expresiones
   92                        | %empty

   93 comparacion: exp TOK_IGUAL exp
   94            | exp TOK_DISTINTO exp
   95            | exp TOK_MENORIGUAL exp
   96            | exp TOK_MAYORIGUAL exp
   97            | exp '<' exp
   98            | exp '>' exp

   99 constante: constante_logica
  100          | constante_entera

  101 constante_logica: TOK_TRUE
  102                 | TOK_FALSE

  103 constante_entera: TOK_CONSTANTE_ENTERA


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 78
'(' (40) 31 51 52 59 60 63 64 81 82 84 85
')' (41) 31 51 52 59 60 63 64 81 82 84 85
'*' (42) 74
'+' (43) 71
',' (44) 26 28 91
'-' (45) 72 75
'.' (46) 51 61
'/' (47) 73
';' (59) 5 6 37 45
'<' (60) 97
'=' (61) 57 58 59 60 61
'>' (62) 98
'[' (91) 25 26 62
']' (93) 25 26 62
'{' (123) 1 2 18 19 24 31 63 64 65
'}' (125) 1 2 18 19 24 31 63 64 65
error (256)
TOK_NONE (258) 32 70
TOK_CLASS (259) 18 19
TOK_INHERITS (260) 18
TOK_INSTANCE_OF (261) 59 60
TOK_DISCARD (262) 54
TOK_ITSELF (263) 88
TOK_FLECHA (264)
TOK_HIDDEN (265) 7 10
TOK_SECRET (266) 8 11
TOK_EXPOSED (267) 9 12
TOK_UNIQUE (268) 7 8 9 13
TOK_FUNCTION (269) 31
TOK_RETURN (270) 69 70
TOK_MAIN (271) 1 2
TOK_INT (272) 22
TOK_BOOLEAN (273) 23
TOK_ARRAY (274) 25 26
TOK_IF (275) 63 64
TOK_ELSE (276) 64
TOK_WHILE (277) 65
TOK_SCANF (278) 66 67
TOK_PRINTF (279) 68
TOK_IDENTIFICADOR (280) 18 19 24 27 28 31 39 40 51 52 54 57 59 60 61
    62 66 79 84 85 86 87
TOK_IGUAL (281) 93
TOK_DISTINTO (282) 94
TOK_MENORIGUAL (283) 95
TOK_MAYORIGUAL (284) 96
TOK_OR (285) 77
TOK_AND (286) 76
TOK_CONSTANTE_ENTERA (287) 103
TOK_FALSE (288) 102
TOK_TRUE (289) 101
TOK_ERROR (290)
TOK_FOR (291)
TOK_SWITCH (292)
TOK_CASE (293)
TOK_DEFAULT (294)
TOK_FLOAT (295)
TOK_MALLOC (296)
TOK_CPRINTF (297)
TOK_FREE (298)
TOK_SET (299)
TOK_OF (300)
TOK_UNION (301)
TOK_INTERSECTION (302)
TOK_ADD (303)
TOK_CLEAR (304)
TOK_SIZE (305)
TOK_CONTAINS (306)
TOK_CONSTANTE_REAL (307)
NEG (308)


No terminales con las reglas donde aparecen

$accept (71)
    en la izquierda: 0
programa (72)
    en la izquierda: 1 2, en la derecha: 0
declaraciones (73)
    en la izquierda: 3 4, en la derecha: 1 3 18 19 41
declaracion (74)
    en la izquierda: 5 6, en la derecha: 3 4
modificadores_acceso (75)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 5 6 31
clase (76)
    en la izquierda: 15 16 17, en la derecha: 5
declaracion_clase (77)
    en la izquierda: 18 19, en la derecha: 6
modificadores_clase (78)
    en la izquierda: 20, en la derecha: 18 19
clase_escalar (79)
    en la izquierda: 21, en la derecha: 15
tipo (80)
    en la izquierda: 22 23, en la derecha: 21 25 26 33 39
clase_objeto (81)
    en la izquierda: 24, en la derecha: 17 34 40
clase_vector (82)
    en la izquierda: 25 26, en la derecha: 16
identificadores (83)
    en la izquierda: 27 28, en la derecha: 5 18 28
funciones (84)
    en la izquierda: 29 30, en la derecha: 1 2 18 19 29
funcion (85)
    en la izquierda: 31, en la derecha: 29
tipo_retorno (86)
    en la izquierda: 32 33 34, en la derecha: 31
parametros_funcion (87)
    en la izquierda: 35 36, en la derecha: 31
resto_parametros_funcion (88)
    en la izquierda: 37 38, en la derecha: 35 37
parametro_funcion (89)
    en la izquierda: 39 40, en la derecha: 35 37
declaraciones_funcion (90)
    en la izquierda: 41 42, en la derecha: 31
sentencias (91)
    en la izquierda: 43 44, en la derecha: 1 2 31 44 63 64 65
sentencia (92)
    en la izquierda: 45 46, en la derecha: 43 44
sentencia_simple (93)
    en la izquierda: 47 48 49 50 51 52 53, en la derecha: 45
destruir_objeto (94)
    en la izquierda: 54, en la derecha: 53
bloque (95)
    en la izquierda: 55 56, en la derecha: 46
asignacion (96)
    en la izquierda: 57 58 59 60 61, en la derecha: 47
elemento_vector (97)
    en la izquierda: 62, en la derecha: 58 59 67 83
condicional (98)
    en la izquierda: 63 64, en la derecha: 55
bucle (99)
    en la izquierda: 65, en la derecha: 56
lectura (100)
    en la izquierda: 66 67, en la derecha: 48
escritura (101)
    en la izquierda: 68, en la derecha: 49
retorno_funcion (102)
    en la izquierda: 69 70, en la derecha: 50
exp (103)
    en la izquierda: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86,
    en la derecha: 57 58 61 62 63 64 65 68 69 71 72 73 74 75 76 77
    78 81 89 91 93 94 95 96 97 98
identificador_clase (104)
    en la izquierda: 87 88, en la derecha: 51 61 85 86
lista_expresiones (105)
    en la izquierda: 89 90, en la derecha: 51 52 59 60 84 85
resto_lista_expresiones (106)
    en la izquierda: 91 92, en la derecha: 89 91
comparacion (107)
    en la izquierda: 93 94 95 96 97 98, en la derecha: 82
constante (108)
    en la izquierda: 99 100, en la derecha: 80
constante_logica (109)
    en la izquierda: 101 102, en la derecha: 99
constante_entera (110)
    en la izquierda: 103, en la derecha: 25 26 100


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . '{' declaraciones funciones sentencias '}'
    2         | TOK_MAIN . '{' funciones sentencias '}'

    '{'  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN '{' . declaraciones funciones sentencias '}'
    2         | TOK_MAIN '{' . funciones sentencias '}'

    TOK_HIDDEN    desplazar e ir al estado 5
    TOK_SECRET    desplazar e ir al estado 6
    TOK_EXPOSED   desplazar e ir al estado 7
    TOK_UNIQUE    desplazar e ir al estado 8
    TOK_FUNCTION  desplazar e ir al estado 9

    TOK_CLASS    reduce usando la regla 14 (modificadores_acceso)
    TOK_INT      reduce usando la regla 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificadores_acceso)
    '{'          reduce usando la regla 14 (modificadores_acceso)
    $default     reduce usando la regla 30 (funciones)

    declaraciones         ir al estado 10
    declaracion           ir al estado 11
    modificadores_acceso  ir al estado 12
    funciones             ir al estado 13
    funcion               ir al estado 14


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    7 modificadores_acceso: TOK_HIDDEN . TOK_UNIQUE
   10                     | TOK_HIDDEN .

    TOK_UNIQUE  desplazar e ir al estado 15

    $default  reduce usando la regla 10 (modificadores_acceso)


Estado 6

    8 modificadores_acceso: TOK_SECRET . TOK_UNIQUE
   11                     | TOK_SECRET .

    TOK_UNIQUE  desplazar e ir al estado 16

    $default  reduce usando la regla 11 (modificadores_acceso)


Estado 7

    9 modificadores_acceso: TOK_EXPOSED . TOK_UNIQUE
   12                     | TOK_EXPOSED .

    TOK_UNIQUE  desplazar e ir al estado 17

    $default  reduce usando la regla 12 (modificadores_acceso)


Estado 8

   13 modificadores_acceso: TOK_UNIQUE .

    $default  reduce usando la regla 13 (modificadores_acceso)


Estado 9

   31 funcion: TOK_FUNCTION . modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   desplazar e ir al estado 5
    TOK_SECRET   desplazar e ir al estado 6
    TOK_EXPOSED  desplazar e ir al estado 7
    TOK_UNIQUE   desplazar e ir al estado 8

    $default  reduce usando la regla 14 (modificadores_acceso)

    modificadores_acceso  ir al estado 18


Estado 10

    1 programa: TOK_MAIN '{' declaraciones . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 9

    $default  reduce usando la regla 30 (funciones)

    funciones  ir al estado 19
    funcion    ir al estado 14


Estado 11

    3 declaraciones: declaracion . declaraciones
    4              | declaracion .

    TOK_HIDDEN   desplazar e ir al estado 5
    TOK_SECRET   desplazar e ir al estado 6
    TOK_EXPOSED  desplazar e ir al estado 7
    TOK_UNIQUE   desplazar e ir al estado 8

    TOK_CLASS    reduce usando la regla 14 (modificadores_acceso)
    TOK_INT      reduce usando la regla 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificadores_acceso)
    '{'          reduce usando la regla 14 (modificadores_acceso)
    $default     reduce usando la regla 4 (declaraciones)

    declaraciones         ir al estado 20
    declaracion           ir al estado 11
    modificadores_acceso  ir al estado 12


Estado 12

    5 declaracion: modificadores_acceso . clase identificadores ';'
    6            | modificadores_acceso . declaracion_clase ';'

    TOK_INT      desplazar e ir al estado 21
    TOK_BOOLEAN  desplazar e ir al estado 22
    TOK_ARRAY    desplazar e ir al estado 23
    '{'          desplazar e ir al estado 24

    $default  reduce usando la regla 20 (modificadores_clase)

    clase                ir al estado 25
    declaracion_clase    ir al estado 26
    modificadores_clase  ir al estado 27
    clase_escalar        ir al estado 28
    tipo                 ir al estado 29
    clase_objeto         ir al estado 30
    clase_vector         ir al estado 31


Estado 13

    2 programa: TOK_MAIN '{' funciones . sentencias '}'

    TOK_DISCARD        desplazar e ir al estado 32
    TOK_ITSELF         desplazar e ir al estado 33
    TOK_RETURN         desplazar e ir al estado 34
    TOK_IF             desplazar e ir al estado 35
    TOK_WHILE          desplazar e ir al estado 36
    TOK_SCANF          desplazar e ir al estado 37
    TOK_PRINTF         desplazar e ir al estado 38
    TOK_IDENTIFICADOR  desplazar e ir al estado 39

    sentencias           ir al estado 40
    sentencia            ir al estado 41
    sentencia_simple     ir al estado 42
    destruir_objeto      ir al estado 43
    bloque               ir al estado 44
    asignacion           ir al estado 45
    elemento_vector      ir al estado 46
    condicional          ir al estado 47
    bucle                ir al estado 48
    lectura              ir al estado 49
    escritura            ir al estado 50
    retorno_funcion      ir al estado 51
    identificador_clase  ir al estado 52


Estado 14

   29 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 9

    $default  reduce usando la regla 30 (funciones)

    funciones  ir al estado 53
    funcion    ir al estado 14


Estado 15

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE .

    $default  reduce usando la regla 7 (modificadores_acceso)


Estado 16

    8 modificadores_acceso: TOK_SECRET TOK_UNIQUE .

    $default  reduce usando la regla 8 (modificadores_acceso)


Estado 17

    9 modificadores_acceso: TOK_EXPOSED TOK_UNIQUE .
